[tool.poetry]
name = "pubber"
version = "0.1.0"
description = ""
authors = ["Mitch Burton <mitch@mitchellburton.ca>"]
license = "GPLv3"
readme = "README.md"
classifiers = [
    "Topic :: Communications",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
tox = "^4.12.1"
mypy = "^1.8.0"
pytest = "^8.0.0"

[tool.ruff]
exclude = [
    ".tox",
    "pubber/__init__.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
